--- a/boutique/produits/templates/produits/liste_produits.html
+++ b/boutique/produits/templates/produits/liste_produits.html
@@ -21,7 +21,7 @@
             <tr>
                 <td>{{ produit.id }}</td>
                 <td>{{ produit.nom }}</td>
-                <td>{{ produit.prix }} €</td>
+                <td>{{ produit.prix }} Fcfa</td>
                 <td>{{ produit.stock }}</td>
                 <td>{{ produit.categorie.nom }}</td>
                 <td class="actions">
