--- a/boutique/ventes/templates/ventes/ajouter_vente.html
+++ b/boutique/ventes/templates/ventes/ajouter_vente.html
@@ -7,10 +7,7 @@
     <h2 class="my-4">Ajouter une Vente</h2>
     <form method="POST">
         {% csrf_token %}
-        <div class="mb-3">
-            <label class="form-label">Total</label>
-            <input type="number" name="total" step="0.01" class="form-control" required>
-        </div>
+        {{ form.as_p }}
         <button type="submit" class="btn btn-success">Ajouter</button>
         <a href="{% url 'ventes:liste_ventes' %}" class="btn btn-secondary">Annuler</a>
     </form>
