--- a/boutique/produits/templates/produits/liste_produits.html
+++ b/boutique/produits/templates/produits/liste_produits.html
@@ -3,12 +3,18 @@
 {% block title %}Liste des Produits{% endblock %}
 
 {% block content %}
+
+<section class="hero">
+    <h1>Ma boutique</h1>
+    <p>Découvrez la liste des produits disponibles dans notre boutique.</p>
+</section>
+
 <div class="container">
     <h2 class="my-4">Liste des Produits</h2>
     <table class="table table-striped">
         <thead>
             <tr>
-                <th>ID</th>
+                
                 <th>Nom</th>
                 <th>Prix</th>
                 <th>Stock</th>
@@ -19,7 +25,7 @@
         <tbody>
             {% for produit in produits %}
             <tr>
-                <td>{{ produit.id }}</td>
+                
                 <td>{{ produit.nom }}</td>
                 <td>{{ produit.prix }} Fcfa</td>
                 <td>{{ produit.stock }}</td>
@@ -43,7 +49,10 @@
             {% endfor %}
         </tbody>
     </table>
-    <a href="{% url 'produits:ajouter_produit' %}" class="btn btn-primary"><button class="btn-sell">Ajouter</button></a>
+    
+    <a href="{% url 'produits:ajouter_categorie' %}" class="btn btn-warning">Ajouter une Catégorie</a>
+
+    <a href="{% url 'produits:ajouter_produit' %}" class="btn btn-primary">Ajouter un produit</a>
 </div>
 <!DOCTYPE html>
 <html lang="fr">
@@ -74,6 +83,22 @@ body {
     max-width: 1200px;
     margin: 0 auto;
     padding: 2rem;
+}
+
+.hero {
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  background-color: #f5f5f5;
+}
+
+.hero h1 {
+  font-size: 4rem;
+  margin-bottom: 1rem;
+  letter-spacing: 8px;
 }
 
 h1 {
@@ -251,6 +276,80 @@ tr:last-child {
     .actions button {
         width: 100%;
     }
+}
+
+.icons {
+  display: flex;
+  align-items: center;
+  gap: 15px;
+  font-size: large;
+}
+
+.input-wrapper {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 22px;
+  position: relative;
+}
+
+.input {
+  border-style: none;
+  height: 50px;
+  width: 50px;
+  padding: 10px;
+  outline: none;
+  border-radius: 50%;
+  transition: .5s ease-in-out;
+  font-size: 17px;
+  padding-right: 40px;
+  color: #000000;
+}
+
+.input::placeholder,
+.input {
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+  font-size: 17px;
+}
+
+.input::placeholder {
+  color: #8f8f8f;
+}
+
+.icon {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: absolute;
+  font-size: large;
+  right: 0px;
+  cursor: pointer;
+  width: 50px;
+  height: 50px;
+  outline: none;
+  border-style: none;
+  border-radius: 50%;
+  pointer-events: painted;
+  background-color: transparent;
+  transition: .2s linear;
+}
+
+.icon:focus~.input,
+.input:focus {
+  box-shadow: none;
+  width: 100px;
+  border-radius: 0px;
+  background-color: transparent;
+  border-bottom: 3px solid #000000;
+  transition: all 500ms cubic-bezier(0, 0.110, 0.35, 2);
+}
+
+header {
+  padding: 1rem var(--spacing);
+  position: fixed;
+  width: 100%;
+  background: rgba(255, 255, 255, 0.95);
+  z-index: 1000;
 }
     </style>
 
