--- a/boutique/produits/templates/produits/statistiques.html
+++ b/boutique/produits/templates/produits/statistiques.html
@@ -12,4 +12,8 @@
         <li class="list-group-item">Catégorie la plus populaire : {{ categorie_populaire }}</li>
     </ul>
 </div>
+<p></p>
+<a href="{% url 'produits:liste_produits' %}" class="btn btn-secondary">Annuler</a>
+
+
 {% endblock %}
